# RLF-VRTP

./: .gitignore
analysis/: README.md  curves.py  reward_hacking.py
docs/: DESIGN.md  ROADMAP.md
environments/infra_synth/: pyproject.toml
environments/infra_synth/infra_synth/: scaffold.py  tasks.py
eval/: README.md  benchmark.py  parity.py  passk.py  throughput.py
tests/: test_backends.py  test_parity.py  test_passk.py  test_reward_hacking.py  test_scaffold.py  test_tasks.py  test_throughput_mock.py
training/configs/: m1_reverse_6gb.yaml
verifier/verifier/: __init__.py  backends.py
