[project]
name = "infra-synth"
version = "0.1.2"
description = "RLVR environment: generate infrastructure-as-code (Dockerfile first) graded by build + smoke test in a sandboxed verifier."
tags = ["single-turn", "code", "infrastructure", "dockerfile", "rlvr", "verifiable-rewards"]
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "verifiers>=0.1.14",
    "datasets",
    # `crucible-verifier` is not on PyPI (it is a sibling workspace dist). The Hub
    # rebuilds this env from a source archive that does NOT include sibling dirs,
    # so it is pulled from this repo's `verifier/` subdirectory via a git dep
    # (httpx etc. come transitively). Pinned to a commit for reproducible builds —
    # bump the SHA when `verifier/` changes. In the dev workspace, the
    # `[tool.uv.sources] crucible-verifier = {workspace = true}` entry overrides
    # this URL to the editable local member, so local dev/tests are unaffected.
    "crucible-verifier @ git+https://github.com/Harsh-BH/RLF-VRTP.git@4de1eab8181f0af239501a873f942fe7f497e9bc#subdirectory=verifier",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Allow the PEP 508 direct (git) reference to crucible-verifier above.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["infra_synth"]

[tool.hatch.build.targets.wheel.force-include]
"pyproject.toml" = "infra_synth/pyproject.toml"

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 4
